--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource-variable/montserrat": "^5.2.6",
+    "@fontsource/poppins": "^5.2.6",
+    "@fontsource/ubuntu": "^5.2.6",
     "astro": "^5.13.5"
   }
 }
