--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fontsource-variable/montserrat": "^5.2.6",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/ubuntu": "^5.2.6",
-    "astro": "^5.13.5"
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "^5.13.5",
+    "tailwindcss": "^4.1.13"
   }
 }
