--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.1",
+    "@fontsource-variable/edu-nsw-act-cursive": "^5.2.2",
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/montserrat": "^5.2.6",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/ubuntu": "^5.2.6",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "astro": "^5.13.5",
+    "cobe": "^0.6.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
   }
 }
