First snapchot no responsive

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fontsource-variable/edu-nsw-act-cursive": "^5.2.2",
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/montserrat": "^5.2.6",
+    "@fontsource-variable/onest": "^5.2.11",
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/ubuntu": "^5.2.6",
+    "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
