--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.5",
     "cobe": "^0.6.4",
+    "photoswipe": "^5.4.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
